--- a/.github/workflows/build-deploy-matomo-to-ghcr.yml
+++ b/.github/workflows/build-deploy-matomo-to-ghcr.yml
@@ -1,5 +1,9 @@
 name: Build & Push Matomo Image (GHCR)
 
+permissions:
+  contents: read
+  packages: write
+
 on:
   workflow_dispatch:
     inputs:
