--- a/.github/workflows/build-deploy-matomo-to-ghcr.yml
+++ b/.github/workflows/build-deploy-matomo-to-ghcr.yml
@@ -46,7 +46,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.PUSH_GITHUB_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       # 3) ビルドして GHCR に push
       - name: Build and push to GHCR
